cfn_benchmark/cfn_templates/INTENTIUS__chant/examples/fargate-lucene-efs/infra/template.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Outputs": {
    "accessPointId": {
      "Value": {
        "Fn::GetAtt": [
          "accessPoint",
          "AccessPointId"
        ]
      }
    },
    "albDnsName": {
      "Value": {
        "Fn::GetAtt": [
          "sharedAlb",
          "DNSName"
        ]
      }
    },
    "albSgId": {
      "Value": {
        "Fn::GetAtt": [
          "sharedAlbSg",
          "GroupId"
        ]
      }
    },
    "clusterArn": {
      "Value": {
        "Fn::GetAtt": [
          "sharedCluster",
          "Arn"
        ]
      }
    },
    "efsId": {
      "Value": {
        "Fn::GetAtt": [
          "fs",
          "FileSystemId"
        ]
      }
    },
    "efsSecurityGroupId": {
      "Value": {
        "Fn::GetAtt": [
          "efsSecurityGroup",
          "GroupId"
        ]
      }
    },
    "executionRoleArn": {
      "Value": {
        "Fn::GetAtt": [
          "sharedExecutionRole",
          "Arn"
        ]
      }
    },
    "listenerArn": {
      "Value": {
        "Fn::GetAtt": [
          "sharedListener",
          "ListenerArn"
        ]
      }
    },
    "privateSubnet1": {
      "Value": {
        "Fn::GetAtt": [
          "networkPrivateSubnet1",
          "SubnetId"
        ]
      }
    },
    "privateSubnet2": {
      "Value": {
        "Fn::GetAtt": [
          "networkPrivateSubnet2",
          "SubnetId"
        ]
      }
    },
    "vpcId": {
      "Value": {
        "Fn::GetAtt": [
          "networkVpc",
          "VpcId"
        ]
      }
    }
  },
  "Parameters": {
    "appName": {
      "Default": "solr",
      "Description": "App name — used in all resource names",
      "Type": "String"
    }
  },
  "Resources": {
    "accessPoint": {
      "Properties": {
        "AccessPointTags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-${appName}"
            }
          }
        ],
        "FileSystemId": {
          "Fn::GetAtt": [
            "fs",
            "FileSystemId"
          ]
        },
        "PosixUser": {
          "Gid": "8983",
          "Uid": "8983"
        },
        "RootDirectory": {
          "CreationInfo": {
            "OwnerGid": "8983",
            "OwnerUid": "8983",
            "Permissions": "755"
          },
          "Path": "/solr-data"
        }
      },
      "Type": "AWS::EFS::AccessPoint"
    },
    "efsSecurityGroup": {
      "Properties": {
        "GroupDescription": "EFS mount target SG",
        "VpcId": {
          "Fn::GetAtt": [
            "networkVpc",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "fs": {
      "Properties": {
        "Encrypted": true,
        "FileSystemTags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-${appName}"
            }
          }
        ],
        "PerformanceMode": "generalPurpose",
        "ThroughputMode": "bursting"
      },
      "Type": "AWS::EFS::FileSystem"
    },
    "mountTarget1": {
      "Properties": {
        "FileSystemId": {
          "Fn::GetAtt": [
            "fs",
            "FileSystemId"
          ]
        },
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "efsSecurityGroup",
              "GroupId"
            ]
          }
        ],
        "SubnetId": {
          "Fn::GetAtt": [
            "networkPrivateSubnet1",
            "SubnetId"
          ]
        }
      },
      "Type": "AWS::EFS::MountTarget"
    },
    "mountTarget2": {
      "Properties": {
        "FileSystemId": {
          "Fn::GetAtt": [
            "fs",
            "FileSystemId"
          ]
        },
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "efsSecurityGroup",
              "GroupId"
            ]
          }
        ],
        "SubnetId": {
          "Fn::GetAtt": [
            "networkPrivateSubnet2",
            "SubnetId"
          ]
        }
      },
      "Type": "AWS::EFS::MountTarget"
    },
    "networkIgw": {
      "Type": "AWS::EC2::InternetGateway"
    },
    "networkIgwAttachment": {
      "Properties": {
        "InternetGatewayId": {
          "Fn::GetAtt": [
            "networkIgw",
            "InternetGatewayId"
          ]
        },
        "VpcId": {
          "Fn::GetAtt": [
            "networkVpc",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::VPCGatewayAttachment"
    },
    "networkNatEip": {
      "Properties": {
        "Domain": "vpc"
      },
      "Type": "AWS::EC2::EIP"
    },
    "networkNatGateway": {
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "networkNatEip",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Fn::GetAtt": [
            "networkPublicSubnet1",
            "SubnetId"
          ]
        }
      },
      "Type": "AWS::EC2::NatGateway"
    },
    "networkPrivateRoute": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Fn::GetAtt": [
            "networkNatGateway",
            "NatGatewayId"
          ]
        },
        "RouteTableId": {
          "Fn::GetAtt": [
            "networkPrivateRouteTable",
            "RouteTableId"
          ]
        }
      },
      "Type": "AWS::EC2::Route"
    },
    "networkPrivateRouteTable": {
      "Properties": {
        "VpcId": {
          "Fn::GetAtt": [
            "networkVpc",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::RouteTable"
    },
    "networkPrivateRta1": {
      "Properties": {
        "RouteTableId": {
          "Fn::GetAtt": [
            "networkPrivateRouteTable",
            "RouteTableId"
          ]
        },
        "SubnetId": {
          "Fn::GetAtt": [
            "networkPrivateSubnet1",
            "SubnetId"
          ]
        }
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "networkPrivateRta2": {
      "Properties": {
        "RouteTableId": {
          "Fn::GetAtt": [
            "networkPrivateRouteTable",
            "RouteTableId"
          ]
        },
        "SubnetId": {
          "Fn::GetAtt": [
            "networkPrivateSubnet2",
            "SubnetId"
          ]
        }
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "networkPrivateSubnet1": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            "0",
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.128.0/20",
        "VpcId": {
          "Fn::GetAtt": [
            "networkVpc",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::Subnet"
    },
    "networkPrivateSubnet2": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            "1",
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.144.0/20",
        "VpcId": {
          "Fn::GetAtt": [
            "networkVpc",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::Subnet"
    },
    "networkPublicRoute": {
      "DependsOn": "networkIgwAttachment",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Fn::GetAtt": [
            "networkIgw",
            "InternetGatewayId"
          ]
        },
        "RouteTableId": {
          "Fn::GetAtt": [
            "networkPublicRouteTable",
            "RouteTableId"
          ]
        }
      },
      "Type": "AWS::EC2::Route"
    },
    "networkPublicRouteTable": {
      "Properties": {
        "VpcId": {
          "Fn::GetAtt": [
            "networkVpc",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::RouteTable"
    },
    "networkPublicRta1": {
      "Properties": {
        "RouteTableId": {
          "Fn::GetAtt": [
            "networkPublicRouteTable",
            "RouteTableId"
          ]
        },
        "SubnetId": {
          "Fn::GetAtt": [
            "networkPublicSubnet1",
            "SubnetId"
          ]
        }
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "networkPublicRta2": {
      "Properties": {
        "RouteTableId": {
          "Fn::GetAtt": [
            "networkPublicRouteTable",
            "RouteTableId"
          ]
        },
        "SubnetId": {
          "Fn::GetAtt": [
            "networkPublicSubnet2",
            "SubnetId"
          ]
        }
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "networkPublicSubnet1": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            "0",
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.0.0/20",
        "MapPublicIpOnLaunch": true,
        "VpcId": {
          "Fn::GetAtt": [
            "networkVpc",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::Subnet"
    },
    "networkPublicSubnet2": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            "1",
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.16.0/20",
        "MapPublicIpOnLaunch": true,
        "VpcId": {
          "Fn::GetAtt": [
            "networkVpc",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::Subnet"
    },
    "networkVpc": {
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true
      },
      "Type": "AWS::EC2::VPC"
    },
    "sharedAlb": {
      "Properties": {
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "sharedAlbSg",
              "GroupId"
            ]
          }
        ],
        "Subnets": [
          {
            "Fn::GetAtt": [
              "networkPublicSubnet1",
              "SubnetId"
            ]
          },
          {
            "Fn::GetAtt": [
              "networkPublicSubnet2",
              "SubnetId"
            ]
          }
        ],
        "Type": "application"
      },
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer"
    },
    "sharedAlbSg": {
      "Properties": {
        "GroupDescription": "ALB security group",
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "VpcId": {
          "Fn::GetAtt": [
            "networkVpc",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "sharedCluster": {
      "Type": "AWS::ECS::Cluster"
    },
    "sharedExecutionRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "ecr:GetAuthorizationToken",
                    "ecr:BatchCheckLayerAvailability",
                    "ecr:GetDownloadUrlForLayer",
                    "ecr:BatchGetImage"
                  ],
                  "Effect": "Allow",
                  "Resource": "*"
                },
                {
                  "Action": [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents"
                  ],
                  "Effect": "Allow",
                  "Resource": "*"
                }
              ],
              "Version": "2012-10-17"
            },
            "PolicyName": "ExecutionPolicy"
          }
        ]
      },
      "Type": "AWS::IAM::Role"
    },
    "sharedListener": {
      "Properties": {
        "DefaultActions": [
          {
            "FixedResponseConfig": {
              "ContentType": "text/plain",
              "MessageBody": "Not Found",
              "StatusCode": "404"
            },
            "Type": "fixed-response"
          }
        ],
        "LoadBalancerArn": {
          "Fn::GetAtt": [
            "sharedAlb",
            "LoadBalancerArn"
          ]
        },
        "Port": 80,
        "Protocol": "HTTP"
      },
      "Type": "AWS::ElasticLoadBalancingV2::Listener"
    }
  }
}
